# arws

./: .gitignore  README.md
src/ROS2_ur_moveit_examples/: CMakeLists.txt  package.xml
src/ROS2_ur_moveit_examples/launch/: demo.py  gripper.py  hello_moveit.launch.py  onrobot.py
src/ROS2_ur_moveit_examples/src/: hello_moveit.cpp
src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
src/Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
src/camera_control/: package.xml  setup.cfg  setup.py
src/camera_control/camera_control/: camera_control_node.py
src/camera_control/camera_control/scripts/: deprecated.py  depthai-camera-usage.py  everything-except-of-ros-connection.py  reading-depth.py  yolo.py
src/gripper_control/: package.xml  setup.cfg  setup.py
src/gripper_control/gripper_control/: gripper.py  gripper_control_node.py
src/ur_custom_interfaces/: CMakeLists.txt  package.xml
src/ur_custom_interfaces/msg/: URCommand.msg
src/ur_mover/: CMakeLists.txt  package.xml
src/ur_mover/launch/: master_node.launch.py
src/ur_mover/src/: master_node.cpp
src/ur_py_control/: package.xml  setup.cfg  setup.py
src/ur_py_control/launch/: joint_trajectory_controller.launch.py  joint_trajectory_controller_IK.launch.py
src/ur_py_control/ur_py_control/: publisher_joint_trajectory_controller.py  publisher_joint_trajectory_controller_IK.py  show_joint_states.py
